Fixed footer-header item alignment

--- a/site/css/style.scss
+++ b/site/css/style.scss
@@ -253,7 +253,7 @@ a {
         padding-bottom: 40px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
       }
 
